kubernetes/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
